--- a/src/app/pages/underconstruction/underconstruction.component.html
+++ b/src/app/pages/underconstruction/underconstruction.component.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Site en construction - You Cook Network</title>
+  <title>Website Under Construction - You Cook Network</title>
   <style>
     body {
       margin: 0;
@@ -92,10 +92,10 @@
         <p>“Tasty healthy meal, cooked and shared by anyone in the world”</p>
       </div>
 
-      <img src="assets/images/site-construction.png" alt="Site en construction" class="construction-image" />
+      <img src="assets/images/site-construction-en.png" alt="Website Under Construction" class="construction-image" />
 
-      <h2 style="margin-top: 20px; color: #e74c3c;">Site en cours de construction</h2>
-      <p style="color: #666;">Nous travaillons activement pour vous offrir une meilleure expérience.<br>Revenez bientôt !</p>
+       <!--  <h2 style="margin-top: 20px; color: #e74c3c;">Site en cours de construction</h2> {% endcomment %}
+      <p style="color: #666;">Nous travaillons activement pour vous offrir une meilleure expérience.<br>Revenez bientôt !</p> -->
     </div>
   </div>
 </body>
