--- a/src/app/pages/compteuser/modification/signup.component.scss
+++ b/src/app/pages/compteuser/modification/signup.component.scss
@@ -229,3 +229,8 @@ input:focus, select:focus {
   border-radius: 10px;
   padding: 20px;
 }
+.scroll-container {
+  height: 100%;
+  overflow-y: auto;
+  padding: 1rem;
+}
