--- a/src/app/pages/recipe/modalrecipe/modalrecipe.component.html
+++ b/src/app/pages/recipe/modalrecipe/modalrecipe.component.html
@@ -21,6 +21,30 @@
         </div>
       </div>
 
+      <!-- Champ photo -->
+      <div class="field col-12">
+        <label for="photo">PHOTO DE LA RECETTE</label>
+        <div class="photo-upload-container">
+          <input type="file" 
+                 id="photo" 
+                 name="photo" 
+                 accept="image/*" 
+                 (change)="onPhotoSelected($event)"
+                 class="photo-input"
+                 #photoInput>
+          <div class="photo-preview" *ngIf="recipe.photo">
+            <img [src]="getPhotoUrl()" [alt]="recipe.name" class="photo-image">
+            <button type="button" class="remove-photo-btn" (click)="removePhoto()">
+              <i class="pi pi-times"></i>
+            </button>
+          </div>
+          <div class="photo-placeholder" *ngIf="!recipe.photo">
+            <i class="pi pi-image"></i>
+            <span>Cliquez pour sélectionner une photo</span>
+          </div>
+        </div>
+      </div>
+
       <h5 class="dialog-title">DETAILS DE LA RECETTE</h5>
       <button pButton label="Ajouter un ingrédient" type="button" [loading]="loading"
         class="p-button-primary mt-2" (click)="showAddDetailDishesForm()"></button>
